--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,60 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 2rem;
+    background-color: #FFF576;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+header ul {
+    display: flex;
+    list-style-type: none;
+    align-items: center;
+    gap: 2rem;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+main {
+    background-color: #e0d0de;
+    padding: 1rem;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+main ul {
+    display: flex;
+    list-style-type: none;
+    gap: 1rem;
+}
+
+.card1 .cards {
+    height: 110px;
+    width: 150px;
+    background: greenyellow;
+    margin: 1rem;
+}
+
+.card2 .cards {
+    height: 110px;
+    width: 150px;
+    background: antiquewhite;
+    margin: 1rem;
+}
+
+.card1,
+.card2 {
+    display: flex;
+}
+
+.about {
+    padding: 1rem;
+    text-align: center;
+}
+
+.about img[alt='red-card'] {
+    padding: 6rem;
+    border: 1px solid black;
 }
